# boris-core

./: ACTIVE_CORE.md  ARCHIVE_ROLE_MAP_v1_4_8.md  ARCHIVE_ROLE_MAP_v1_4_9.md  ARTICLE_INCLUSION_NOTICE.md  ARTICLE_PRIVACY_EXCEPTION.md  CHANGELOG.md  CHECKSUMS.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPORT_CONTROL_NOTE.md  FINAL_VERIFICATION.json  FULL_ACTUAL_COMPACT_COMPANION.md  FULL_ACTUAL_COMPACT_COMPANION_NOTE.md  FULL_ACTUAL_COMPACT_PACKAGE.md  FULL_ACTUAL_COMPACT_POLICY_v1_4_9.md  FULL_ACTUAL_VERSION_COMPANION.md  GOVERNANCE.md  LEGAL_CODE_REGISTRATION_TEXT_CONTENT.md  LICENSE-CODE-MIT  LICENSE-DOCS-CC-BY-4.0.txt  MAINTAINERS.md  MANIFEST.json  MEMORY_BORIS_EGO_v0_5.md  MEMORY_BORIS_EGO_v1_1.md  MEMORY_BORIS_EGO_v1_2.md  MEMORY_BORIS_EGO_v1_4.md  MEMORY_BORIS_EGO_v1_5.md  MEMORY_BORIS_EGO_v1_6.md  MEMORY_BORIS_EGO_v1_7.md  NO_AUTONOMOUS_COERCIVE_GOVERNANCE.md  PACKAGING_POLICY_COMPACT_ARCHIVES_v1_4_8_RU.md  PACKAGING_POLICY_COMPACT_ARCHIVES_v1_4_9_RU.md  PROGRAM_TEXT_PACKAGE.md  PUBLIC_RELEASE_AND_FULL_ACTUAL_COMPACT_v1_4_8.md  README.md  README_AI_LOAD_EN.md  RELEASE_BOUNDARIES.md  RELEASE_STATUS_FINAL_FREEZE.md  RESPONSIBLE_USE.md  (+11 more)
00_MEMORY/: BOIS_SIMA_BORIS_MEMORY_WITH_BORIS_EGO_v0_6_RU.md  BOIS_SIMA_BORIS_MEMORY_WITH_BORIS_EGO_v0_7_RU.md  BOIS_SIMA_BORIS_MEMORY_WITH_BORIS_EGO_v0_8_RU.md  BOIS_SIMA_BORIS_MEMORY_WITH_BORIS_EGO_v0_9_RU.md  BOIS_SIMA_BORIS_MEMORY_WITH_BORIS_EGO_v1_0_RU.md  BOIS_SIMA_BORIS_MEMORY_WITH_BORIS_EGO_v1_3_RU.md
05_BOOTSTRAP_PROMPTS/: RESTORE_PROMPT_BORIS_EGO_v0_5_RU.md  RESTORE_PROMPT_BORIS_EGO_v0_6_RU.md  (+10 more)
(+711 files in other folders)
