[project]
name = "bois-sima-boris"
version = "1.4.10"
description = "Local-only SIMA analyzer and BOIS/BORIS documentation package; EGO default-core localized term understanding and maximal-format stability package with UN language parity, developed physiology compatibility, and BORIS EGO v1.7"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "BOIS:SIMA&BORIS Project Contributors"}]
keywords = ["SIMA", "BOIS", "BORIS", "BORIS EGO", "UN languages", "philosophical machines", "local analysis", "governance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha"
]

[project.scripts]
bois-sima-boris = "bois_sima_boris.cli:main"

[build-system]
requires = []
build-backend = "bois_sima_boris_build_backend"
backend-path = ["build_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
